test/asm/label-outside-section.err
ERROR: label-outside-section.asm(1):
    Label "bad" created outside of a SECTION
error: Assembly aborted (1 errors)!
