test/asm/label-outside-section.asm
bad:
SECTION "Test", ROM0
good:
    PRINTT "OK!\n"
